--- a/hmbanner/src/main/res/values/strings.xml
+++ b/hmbanner/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BannerLibrary</string>
+    <string name="app_name">HmBanner</string>
     <string name="jump_over">跳过</string>
     <string name="enter">进入应用</string>
 </resources>
